--- a/.github/workflows/docker-build-actions.yml
+++ b/.github/workflows/docker-build-actions.yml
@@ -12,22 +12,18 @@ jobs:
     docker:
         runs-on: ubuntu-latest
         steps:
-            -
-                name: Checkout
+            -   name: Checkout
                 uses: actions/checkout@v2
-            -
-                name: setup java
+            -   name: setup java
                 uses: actions/setup-java@v1
                 with:
-                  java-version: '11'
-                  java-package: jdk
-                  architecture: x64
-            -
-                name: Run build plantuml script
+                    java-version: '11'
+                    java-package: jdk
+                    architecture: x64
+            -   name: Run build plantuml script
                 run: ./build_plantuml.sh
                 shell: bash
-            -
-                name: Prepare for docker build
+            -   name: Prepare for docker build
                 id: prep
                 run: |
                     DOCKER_IMAGE=eguisse/mddoc
@@ -55,21 +51,17 @@ jobs:
                     echo ::set-output name=version::${VERSION}
                     echo ::set-output name=tags::${TAGS}
                     echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-            -
-                name: Set up QEMU
+            -   name: Set up QEMU
                 uses: docker/setup-qemu-action@v1
-            -
-                name: Set up Docker Buildx
+            -   name: Set up Docker Buildx
                 uses: docker/setup-buildx-action@v1
-            -
-                name: Login to DockerHub
+            -   name: Login to DockerHub
                 if: github.event_name != 'pull_request'
                 uses: docker/login-action@v1
                 with:
                     username: ${{ secrets.DOCKERHUB_USERNAME }}
                     password: ${{ secrets.DOCKERHUB_TOKEN }}
-            -
-                name: Build and push
+            -   name: Build and push
                 id: docker_build
                 uses: docker/build-push-action@v2
                 with:
@@ -87,16 +79,13 @@ jobs:
                         org.opencontainers.image.created=${{ steps.prep.outputs.created }}
                         org.opencontainers.image.revision=${{ github.sha }}
                         org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
-            -
-                name: Image digest
+            -   name: Image digest
                 run: echo ${{ steps.docker_build.outputs.digest }}
-            -
-                name: Test the pdf converter
+            -   name: Test the pdf converter
                 run: ./convert2pdf -d docs -b build -o mddoc_test_doc.pdf -f mddoc.yml -s site
                 shell: bash
-            -
-                name: Archive production artifacts
-                  uses: actions/upload-artifact@v2
-                  with:
-                      name: mddoc_test_doc.pdf
-                      path: build/mddoc_test_doc.pdf
+            -   name: Archive production artifacts
+                uses: actions/upload-artifact@v2
+                with:
+                    name: mddoc_test_doc.pdf
+                    path: build/mddoc_test_doc.pdf
