--- a/.github/workflows/docker-build-actions.yml
+++ b/.github/workflows/docker-build-actions.yml
@@ -46,7 +46,7 @@ jobs:
                       MAJOR=${MINOR%.*}
                       TAGS="$TAGS,${DOCKER_IMAGE}:${MINOR},${DOCKER_IMAGE}:${MAJOR},${DOCKER_IMAGE}:latest"
                     elif [ "${{ github.event_name }}" = "push" ]; then
-                      TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
+                      TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8},${DOCKER_IMAGE}:latest"
                     fi
                     echo ::set-output name=version::${VERSION}
                     echo ::set-output name=tags::${TAGS}
@@ -81,8 +81,10 @@ jobs:
                         org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
             -   name: Image digest
                 run: echo ${{ steps.docker_build.outputs.digest }}
+            -   name: list image
+                run: docker image ls
             -   name: Test the pdf converter
-                run: ./convert2pdf -d docs -b build -o mddoc_test_doc.pdf -f mddoc.yml -s site
+                run: MDDOC_DOCKER_IMAGE="mddoc:lastest" ./convert2pdf -d docs -b build -o mddoc_test_doc.pdf -f mddoc.yml -s site
                 shell: bash
             -   name: Archive production artifacts
                 uses: actions/upload-artifact@v2
