--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,15 @@
 repos:
-#  - repo: git@gitlab.com:emmanuel.guisse/doctoc
-#    rev: v1.1.2
-#    hooks:
-#      - id: doctoc
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
-    hooks:
-      #- id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-docstring-first
-      - id: check-json
-      - id: check-yaml
-      # - id: debug-statements
-      - id: name-tests-test
-      # - id: requirements-txt-fixer
-      # - id: double-quote-string-fixer
+    -   repo: https://github.com/pre-commit/pre-commit-hooks
+        rev: v3.2.0
+        hooks:
+            #- id: trailing-whitespace
+            -   id: end-of-file-fixer
+            -   id: check-docstring-first
+            -   id: check-json
+            -   id: check-yaml
+            # - id: debug-statements
+            -   id: name-tests-test
+            -   id: detect-private-key
+            -   id: detect-aws-credentials
+            # - id: requirements-txt-fixer
+            # - id: double-quote-string-fixer
