--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-GitPython>=2.1.11
-bios>=0.1.2
-pandoc-plantuml-filter>=0.1.2
-mkdocs>=1.1.2
-mkdocs-material>=5.4.0
-plantuml-markdown>=3.2.2
-mkdocs-build-plantuml-plugin>=1.5.0
+GitPython==3.1.8
+bios==0.1.2
+pandoc-plantuml-filter==0.1.2
+mkdocs==1.1.2
+mkdocs-material==5.5.13
+plantuml-markdown==3.4.0
+mkdocs-build-plantuml-plugin==1.5.0
