--- a/.github/workflows/docker-build-actions.yml
+++ b/.github/workflows/docker-build-actions.yml
@@ -42,7 +42,7 @@ jobs:
                     fi
                     TAGS="${DOCKER_IMAGE}:${VERSION}"
                     LOCAL_VERSION="${DOCKER_IMAGE}:${VERSION}"
-                    if [[ $VERSION =~ ^v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
+                    if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
                       MINOR=${VERSION%.*}
                       MAJOR=${MINOR%.*}
                       TAGS="$TAGS,${DOCKER_IMAGE}:${MINOR},${DOCKER_IMAGE}:${MAJOR},${DOCKER_IMAGE}:latest"
