add page Approvers and Reviewers

--- a/mddoc.yml
+++ b/mddoc.yml
@@ -41,10 +41,11 @@ extra:
 
 
 nav:
+  - Approvers and Reviewers: doc_review.md
   - Home: index.md
   - Introduction: introduction.md
   - Processes: process.md
-  - nwdiag.md
+  - Network diagram: nwdiag.md
 
 
 theme:
