update components versions

--- a/config.env
+++ b/config.env
@@ -2,3 +2,7 @@ APP_NAME=mddoc
 DOCKER_REPO=eguisse
 #DOCKER_BUILD_OPT=--build-arg http_proxy=http://172.17.0.1:3128 --build-arg https_proxy=http://172.17.0.1:3128
 DOCKER_BUILD_OPT=
+PANDOC_VERSION=2.17.0.1
+IMAGE_NAME=mddoc
+WKHTMLTOPDF_VERSION=0.12.6-1
+
