--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-GitPython==3.1.12
-bios==0.1.2
+GitPython>=3.1.12
+bios>=0.1.2
 pandoc-plantuml-filter==0.1.2
-mkdocs==1.1.2
-mkdocs-material==5.5.13
-plantuml-markdown==3.4.0
+mkdocs==1.2.3
+mkdocs-material>=8.1.4
+plantuml-markdown==3.5.1
 mkdocs-build-plantuml-plugin==1.5.0
-funcparserlib==0.3.6
-nwdiag==2.0.0
+funcparserlib>=0.3.6
+nwdiag>=2.0.0
 mkdocs-github==0.0.6
-mkdocs-material-components==1.10.14
 mkdocs-diagrams==1.0.0
 IconFonts==0.0.3
 mkdocs-extensions==0.1.2
 mkdocs-pymdownx-material-extras==1.1.1
-mkdocs-basic-theme==1.0.1
-seqdiag==2.0.0
-actdiag==2.0.0
-urllib3==1.25.10
+mkdocs-basic-theme>=1.0.1
+seqdiag>=2.0.0
+actdiag>=2.0.0
+urllib3>=1.25.10
