--- a/mddoc.yml
+++ b/mddoc.yml
@@ -9,7 +9,7 @@ site_url: https://localhost/mddoc-test
 site_description: mddoc test document
 site_author: Steve Austin
 repo_url: https://github.com/eguisse/mddoc
-copyright: Copyright (c) 2019 2020, Emmanuel GUISSE
+copyright: Copyright (c) 2019 - 2022, Emmanuel GUISSE
 
 
 extra:
@@ -60,6 +60,8 @@ markdown_extensions:
           guess_lang: false
     - toc:
           permalink: true
+    - pymdownx.arithmatex:
+          generic: true
 
 plugins:
     - search
@@ -71,3 +73,8 @@ plugins:
           output_folder: "image"
           input_folder: ""
           input_extensions: ""
+
+extra_javascript:
+    - javascripts/mathjax.js
+    - https://polyfill.io/v3/polyfill.min.js?features=es6
+    - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
