--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ IconFonts==0.0.3
 mkdocs-extensions==0.1.2
 mkdocs-pymdownx-material-extras==1.1.1
 mkdocs-basic-theme>=1.0.1
+mkdocs-codeinclude-plugin=>0.2.0
 seqdiag>=2.0.0
 actdiag>=2.0.0
 urllib3>=1.25.10
