upgrade component in Dockerfile

--- a/mddoc.yml
+++ b/mddoc.yml
@@ -40,7 +40,7 @@ extra:
   # Build new file table_of_contents.md with the list of chapters found in all md documents
   include_table_of_contents: true
   logo_filename: images/logo.png
-
+  generator: false
 
 nav:
   - Home: index.md
@@ -57,24 +57,23 @@ theme:
 markdown_extensions:
     - admonition
     - codehilite:
-          guess_lang: false
+          guess_lang: true
     - toc:
           permalink: true
     - pymdownx.arithmatex:
           generic: true
+    - attr_list
+    - pymdownx.emoji
 
 plugins:
     - search
     - build_plantuml:
-          render: "local" # "server" or "local" for local rendering
-          bin_path: "/usr/local/bin/plantuml" # for security reason, we don't use online server
-          output_format: "png" # or "png"
-          diagram_root: "diagrams" # should reside under docs_dir
-          output_folder: "image"
-          input_folder: ""
-          input_extensions: ""
-
-extra_javascript:
-    - javascripts/mathjax.js
-    - https://polyfill.io/v3/polyfill.min.js?features=es6
-    - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+          render: 'local' # or "local" for local rendering
+          bin_path: '/usr/local/bin/plantuml' # ignored when render: server
+          server: 'http://www.plantuml.com/plantuml' # offical plantuml server
+          disable_ssl_certificate_validation: true # for self-signed and invalid certs
+          output_format: 'svg' # or "png"
+          diagram_root: 'docs/diagrams' # should reside under docs_dir
+          output_folder: 'out'
+          input_folder: 'src'
+          input_extensions: '' # comma separated list of extensions to parse, by default every file is parsed
