--- a/.github/workflows/docker-build-actions.yml
+++ b/.github/workflows/docker-build-actions.yml
@@ -11,13 +11,14 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   name: Checkout
-                uses: actions/checkout@v2
+                uses: actions/checkout@v4
             -   name: setup java
-                uses: actions/setup-java@v1
+                uses: actions/setup-java@v4
                 with:
-                    java-version: '11'
+                    java-version: '17'
                     java-package: jdk
                     architecture: x64
+                    distribution: ''
             -   name: Run build plantuml script
                 run: ./build_plantuml.sh
                 shell: bash
@@ -52,7 +53,7 @@ jobs:
                     echo ::set-output name=tags::${TAGS}
                     echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
             -   name: Set up QEMU
-                uses: docker/setup-qemu-action@v1
+                uses: docker/setup-qemu-action@v3
             -   name: Set up Docker Buildx
                 uses: docker/setup-buildx-action@v1
             -   name: Login to DockerHub
