upgrade dependencies + update CI/CD

--- a/.github/workflows/docker-build-actions.yml
+++ b/.github/workflows/docker-build-actions.yml
@@ -18,7 +18,7 @@ jobs:
                     java-version: '17'
                     java-package: jdk
                     architecture: x64
-                    distribution: ''
+                    distribution: 'adopt'
             -   name: Run build plantuml script
                 run: ./build_plantuml.sh
                 shell: bash
