--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ pandoc-plantuml-filter==0.1.5
 mkdocs==1.6.1
 mkdocs-material>=9.5.40
 plantuml-markdown==3.10.4
-mkdocs-build-plantuml-plugin==1.10.0
+mkdocs-build-plantuml-plugin==1.9
 funcparserlib>=0.3.6
-nwdiag>=2.0.0
+nwdiag>=3.0.0
 mkdocs-github==0.0.6
 mkdocs-diagrams==1.0.0
 IconFonts==0.0.3
@@ -15,8 +15,10 @@ mkdocs-material-extensions==1.3.1
 mkdocs-pymdownx-material-extras>=2.6
 mkdocs-basic-theme>=1.0.1
 mkdocs-codeinclude-plugin>=0.2.1
+blockdiag>=3.0.0
 seqdiag>=3.0.0
 actdiag>=3.0.0
 urllib3>=2.2.3
 pygments>=2.18.0
 pymdown-extensions>=9.5
+Pillow==9.5.0
