--- a/.github/workflows/docker-build-actions.yml
+++ b/.github/workflows/docker-build-actions.yml
@@ -1,3 +1,4 @@
+---
 name: docker-image-build-action
 
 on:
@@ -6,6 +7,9 @@ on:
             - '*.*.*'
     pull_request:
     workflow_dispatch:
+env:
+    REGISTRY: ghcr.io
+    IMAGE_NAME: ${{ github.repository }}
 
 jobs:
     push_to_registry:
@@ -24,40 +28,46 @@ jobs:
                 fetch-depth: 1
 
             - name: Log in to Docker Hub
-              uses: docker/login-action@3
+              uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
               with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
+                registry: ${{ env.REGISTRY }}
+                username: ${{ github.actor }}
+                password: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Extract metadata (tags, labels) for Docker
-              id: meta
-              uses: docker/metadata-action@5
+            - id: docker_image_metadata
+              name: Extract metadata (tags, labels) for Docker
+              uses: docker/metadata-action@v4
               with:
-                  images: ${{ github.repository }}
-                  tags: |
-                      type=ref,event=branch
-                      type=ref,event=pr
-                      type=semver,pattern={{version}}
-                      type=semver,pattern={{major}}.{{minor}}
+                  images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-            -   name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v3
+            - id: setup-buildx
+              name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
 
-            - name: Build and push Docker image
-              id: push
-              uses: docker/build-push-action@v6
+            - id: docker_image_build_push_to_ghcr
+              name: Build app, build docker image and Push image to ghcr.io
+              uses: docker/build-push-action@v5
               with:
                   context: .
                   file: ./Dockerfile
-                  push: true
-                  tags: ${{ steps.meta.outputs.tags }}
-                  labels: ${{ steps.meta.outputs.labels }}
+                  push: ${{ github.event_name != 'pull_request' }}
+                  tags: ${{ steps.docker_image_metadata.outputs.tags }}
+                  labels: ${{ steps.docker_image_metadata.outputs.labels }}
+                  cache-from: type=gha
+                  cache-to: type=gha,mode=max
+                  build-args: |
+                      VERSION=${{ github.ref_name }}
+                      COMMIT_SHA=${{ github.sha }}
+
+            - id: docker_image_digest
+              name: Show Docker Image digest
+              run: echo ${{ steps.docker_image_build_push_to_ghcr.outputs.digest }}
 
             - name: Generate artifact attestation
               uses: actions/attest-build-provenance@v2
               with:
                   subject-name: index.docker.io/${{ github.repository }}
-                  subject-digest: ${{ steps.push.outputs.digest }}
+                  subject-digest: ${{ steps.docker_image_build_push_to_ghcr.outputs.digest }}
                   push-to-registry: true
 
 
